--- a/templates/header.html
+++ b/templates/header.html
@@ -19,7 +19,7 @@
             </div>
             <ul class="mobile-nav">
                 <li class="active"><a href="/">Главная</a></li>
-                <li><a href="{% url 'prices' %}">Цены и сроки</a></li>
+                <li><a href="{% url 'services' %}">Цены и сроки</a></li>
                 <li><a href="{% url 'allposts' %}">Статьи</a></li>
                 <li><a href="{% url 'index' %}#reviews" class="not-visible-sm">Отзывы</a></li>
                 <li><a href="{% url 'index' %}#about" class="not-visible-sm">О нас</a></li>
@@ -31,7 +31,7 @@
         <img src="{% static 'images/icons/EDE.png' %}" alt="">
         <ul class="nav">
             <li class="active"><a href="/">Главная</a></li>
-            <li><a href="{% url 'prices' %}">Цены и сроки</a></li>
+            <li><a href="{% url 'services' %}">Цены и сроки</a></li>
             <li><a href="{% url 'allposts' %}">Статьи</a></li>
             <li><a href="{% url 'index' %}#reviews" class="not-visible-sm">Отзывы</a></li>
             <li><a href="{% url 'index' %}#about" class="not-visible-sm">О нас</a></li>
