--- a/templates/footer.html
+++ b/templates/footer.html
@@ -23,7 +23,7 @@
             </div>
 
             <div class="footer-top-phones text-right">
-                <p>{{ subdomain.contactPhone }}</p>
+                <p>8 800 500 43 57</p>
                 <a class="btn " onclick="toggleModal('callback-order-modal')">заказать звонок</a>
             </div>
 
@@ -37,9 +37,9 @@
                 <a class="link" href="#">политика конфидициальности</a>
 
                 <ul>
-                    <li><a href="#" rel="nofollow"><span class="vk_icon"></span></a></li>
+                    <li><a href="https://vk.com/ede74" target="_blank" rel="nofollow"><span class="vk_icon"></span></a></li>
                     <li><a href="#" rel="nofollow"><span class="fb_icon"></span></a></li>
-                    <li><a href="#" rel="nofollow"><span class="inst_icon"></span></a></li>
+                    <li><a href="https://www.instagram.com/edelveis74/" target="_blank" rel="nofollow"><span class="inst_icon"></span></a></li>
                 </ul>
             </div>
         </div>
