--- a/templates/header_index.html
+++ b/templates/header_index.html
@@ -15,7 +15,7 @@
         <div class="grid-item header-phones">
             <div class="header-phones-inner">
                 <p>Есть вопрос? Звоните</p>
-                <span>{{ subdomain.contactPhone }}</span>
+                <span>8 800 500 43 57</span>
                 <a class="btn btn-callback" onclick="toggleModal('callback-order-modal')">перезвоните мне</a>
             </div>
         </div>
@@ -23,7 +23,7 @@
     <div class="container mobile-menu-wrapper">
         <div class="mobile-toggle"></div>
         <div class="mobile-menu-phohe">
-            <a href="tel:{{ subdomain.contactPhone }}">{{ subdomain.contactPhone }}</a>
+            <a href="tel:88005004357">8 800 500 43 57</a>
         </div>
     </div>
     <div class="mobile-menu-panel">
