--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2091,6 +2091,8 @@ select {
 
 .prices-item-inner p:first-child {
   font-family: 'MuseoSansCyrl-500', sans-serif;
+  -ms-flex-preferred-size: 30%;
+  flex-basis: 30%;
 }
 
 .prices-item-inner:hover {
@@ -2631,34 +2633,39 @@ select {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
+  grid-column: span 2;
+}
+
+.footer-social a {
+  margin: auto;
 }
 
 .footer-social ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin: auto;
 }
 
 .footer-social span {
   width: 40px;
   height: 40px;
   display: inline-block;
-  background-position-x: 75%;
 }
 
 .vk_icon {
   background: url(../img/icons/social.jpg);
-  background-position-x: 75%;
+  background-position-x: 0;
 }
 
 .fb_icon {
   background: url(../img/icons/social.jpg);
-  background-position-x: 75%;
+  background-position-x: 50%;
 }
 
 .inst_icon {
   background: url(../img/icons/social.jpg);
-  background-position-x: 75%;
+  background-position-x: 100%;
 }
 
 .modal {
@@ -3098,6 +3105,15 @@ input[type='radio']#register_button:checked ~ #register-form-button {
 
   .contacts-phones {
     margin-bottom: 130px;
+  }
+
+  .prices-item-inner {
+    padding: 2px 30px;
+  }
+
+  .prices-item-inner p:first-child {
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%;
   }
 
   .tab {
