--- a/static/sass/_footer.sass
+++ b/static/sass/_footer.sass
@@ -34,24 +34,28 @@
   display: flex
   align-items: center
   justify-content: space-between
+  grid-column: span 2
+  a
+    margin: auto
   ul
     display: flex
+    margin: auto
   span
     width: 40px
     height: 40px
     display: inline-block
-    background-position-x: 75%
+
 
 .vk_icon
   background: url(../img/icons/social.jpg)
-  background-position-x: 75%
+  background-position-x: 0
 .fb_icon
   background: url(../img/icons/social.jpg)
-  background-position-x: 75%
+  background-position-x: 50%
 
 .inst_icon
   background: url(../img/icons/social.jpg)
-  background-position-x: 75%
+  background-position-x: 100%
 
 @media (max-width: 1024px)
   .footer-top.grid-col4
