--- a/templates/basic.html
+++ b/templates/basic.html
@@ -7,9 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Pragma" content="no-cache"/>
-    <meta http-equiv="cache-control" content="no-store, no-cache, must-revalidate"/>
-    <title>{% block title %}  EDE {% endblock %} </title>
+    <title>{% block title %}  {% endblock %} </title>
     <meta name="keywords" content="{% block keywords %} keywords {% endblock %}">
     <meta name="description" content="{% block description %} description {% endblock %}"/>
     {% block css %}
