--- a/static/sass/_prices.sass
+++ b/static/sass/_prices.sass
@@ -38,6 +38,7 @@
         opacity: 1
   p
     display: inline-block
+    flex-basis: 10%
   p:first-child
     font-family: 'MuseoSansCyrl-500', sans-serif
     flex-basis: 30%
