edit seo text display

--- a/templates/pages/contacts.html
+++ b/templates/pages/contacts.html
@@ -2,17 +2,16 @@
 {% load static %}
 
 {% block title %}
-    {{ block.super }}  - Контакты
+   {{ pageTitle }}
 {% endblock %}
 
 {% block keywords %}
-    {{ block.super }}
+    {{ pageKeywords }}
 {% endblock %}
 
 {% block description %}
-    {{ block.super }}
+    {{ pageDescription }}
 {% endblock %}
-
 {% block css %}
 
     {{ block.super }}
