--- a/templates/pages/post.html
+++ b/templates/pages/post.html
@@ -2,15 +2,15 @@
 {% load static %}
 
 {% block title %}
-    {{ block.super }} - Статья
+   {{ pageTitle }}
 {% endblock %}
 
 {% block keywords %}
-    {{ block.super }}
+    {{ pageKeywords }}
 {% endblock %}
 
 {% block description %}
-    {{ block.super }}
+    {{ pageDescription }}
 {% endblock %}
 
 {% block css %}
