--- a/templates/pages/service.html
+++ b/templates/pages/service.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    {{ block.super }} - {{ pageTitle }}
+   {{ pageTitle }}
 {% endblock %}
 
 {% block keywords %}
