--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -250,7 +250,7 @@
                      data-fullreview="{{ comment.fullReview }}"
                      onclick="changeReview(this)">
                     <div class="our-help-media-slide-image">
-                        <img src="{{ comment.image_small.url }}" alt="">
+                        <img width="245" src="{{ comment.image_small.url }}" alt="">
                     </div>
                     <h5>{{ comment.writtenBy }}</h5>
                     <p>{{ comment.description }}</p>
