--- a/templates/pages/services.html
+++ b/templates/pages/services.html
@@ -37,23 +37,23 @@
             <div class="prices-wrapper">
                 <div class="price-item bg-grey">
                     <h5>Дипломая работа</h5>
-                    <p class="mb20">Стоимость:<span>от 7e900 руб</span></p>
-                    <p class="mb20">Сроки:<span>от 7 дней</span></p>
-                    <p class="mb20">Работ выполнено:<span>23,783</span></p>
+                    <p class="mb20">Стоимость:<span>от 9700 руб</span></p>
+                    <p class="mb20">Сроки:<span>от 5 дней</span></p>
+                    <p class="mb20">Работ выполнено:<span>27 700</span></p>
                     <a class="btn" onclick="toggleModal('order-modal')">заказать работу</a>
                 </div>
                 <div class="price-item bg-grey">
-                    <h5>Дипломая работа</h5>
-                    <p class="mb20">Стоимость:<span>от 7900 руб</span></p>
-                    <p class="mb20">Сроки:<span>от 7 дней</span></p>
-                    <p class="mb20">Работ выполнено:<span>23,783</span></p>
+                    <h5>Курсовая работа</h5>
+                    <p class="mb20">Стоимость:<span>от 1700 руб</span></p>
+                    <p class="mb20">Сроки:<span>от 1 дня</span></p>
+                    <p class="mb20">Работ выполнено:<span>115 780</span></p>
                     <a class="btn" onclick="toggleModal('order-modal')">заказать работу</a>
                 </div>
                 <div class="price-item bg-grey">
-                    <h5>Дипломая работа</h5>
-                    <p class="mb20">Стоимость:<span>от 7900 руб</span></p>
-                    <p class="mb20">Сроки:<span>от 7 дней</span></p>
-                    <p class="mb20">Работ выполнено:<span>23,783</span></p>
+                    <h5>Отчет по практике</h5>
+                    <p class="mb20">Стоимость:<span>от 1700 руб</span></p>
+                    <p class="mb20">Сроки:<span>от 1 дня</span></p>
+                    <p class="mb20">Работ выполнено:<span>67 800</span></p>
                     <a class="btn" onclick="toggleModal('order-modal')">заказать работу</a>
 
                 </div>
