--- a/templates/footer.html
+++ b/templates/footer.html
@@ -34,7 +34,7 @@
                 <span>Заказать диплом или курсовую у реальных практиков</span>
             </div>
             <div class="footer-social">
-                <a class="link" href="#">политика конфидициальности</a>
+                <a class="link" href="{% url 'policy' %}">политика конфидициальности</a>
 
                 <ul>
                     <li><a href="https://vk.com/ede74" target="_blank" rel="nofollow"><span class="vk_icon"></span></a></li>
@@ -46,6 +46,19 @@
 
     </div>
 </footer>
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
+   ym(56395771, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/56395771" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 
 <script src="{% static 'js/sendform.js' %}"></script>
