--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -105,27 +105,30 @@
     <section class="prices">
         <div class="container">
             <h3 class="text-center">Цены на основные услуги</h3>
-            <div class="prices-wrapper">
+              <div class="prices-wrapper">
                 <div class="price-item bg-1">
                     <h5>Дипломая работа</h5>
-                    <p class="mb20">Стоимость:<span>от 7900 руб</span></p>
-                    <p class="mb20">Сроки:<span>от 7 дней</span></p>
-                    <p>Работ выполнено:<span>23,783</span></p>
+                    <p class="mb20">Стоимость:<span>от 9700 руб</span></p>
+                    <p class="mb20">Сроки:<span>от 5 дней</span></p>
+                    <p class="mb20">Работ выполнено:<span>27 700</span></p>
+                    <a class="btn" onclick="toggleModal('order-modal')">заказать работу</a>
                 </div>
                 <div class="price-item bg-2">
-                    <h5>Дипломая работа</h5>
-                    <p class="mb20">Стоимость:<span>от 7900 руб</span></p>
-                    <p class="mb20">Сроки:<span>от 7 дней</span></p>
-                    <p>Работ выполнено:<span>23,783</span></p>
+                    <h5>Курсовая работа</h5>
+                    <p class="mb20">Стоимость:<span>от 1700 руб</span></p>
+                    <p class="mb20">Сроки:<span>от 1 дня</span></p>
+                    <p class="mb20">Работ выполнено:<span>115 780</span></p>
+                    <a class="btn" onclick="toggleModal('order-modal')">заказать работу</a>
                 </div>
                 <div class="price-item bg-3">
-                    <h5>Дипломая работа</h5>
-                    <p class="mb20">Стоимость:<span>от 7900 руб</span></p>
-                    <p class="mb20">Сроки:<span>от 7 дней</span></p>
-                    <p>Работ выполнено:<span>23,783</span></p>
+                    <h5>Отчет по практике</h5>
+                    <p class="mb20">Стоимость:<span>от 1700 руб</span></p>
+                    <p class="mb20">Сроки:<span>от 1 дня</span></p>
+                    <p class="mb20">Работ выполнено:<span>67 800</span></p>
+                    <a class="btn" onclick="toggleModal('order-modal')">заказать работу</a>
 
                 </div>
-            </div>
+            </div><!--//prices-wrapper -->
             <a href="{% url 'services' %}" class="btn btn-md m-a">Посмотреть цены на все услуги</a>
         </div>
     </section><!-- // prices -->
