--- a/static/sass/_common.sass
+++ b/static/sass/_common.sass
@@ -200,3 +200,13 @@ h5
 
 .pt30
   padding-top: 30px
+
+.page-info
+  h2
+    font-family: 'MuseoSansCyrl-700', sans-serif
+    font-size: 20px
+    color: #151515
+    margin-bottom: 15px
+  p
+    margin-bottom: 10px
+    
