edit seo text display

--- a/templates/pages/contacts.html
+++ b/templates/pages/contacts.html
@@ -53,32 +53,19 @@
                     <div class="contacts-phones-header">
                         <p>Есть вопрос? Звоните!</p>
                     </div>
-                    <div class="contacts-phones-inner">
-                        <ul>
-                            <li><p class="contacts-phones-town">Из Челябинска</p>
-                                <p class="contacts-phones-number">8 800 324 45 45</p></li>
-                            <li><p class="contacts-phones-town">Из Челябинска</p>
-                                <p class="contacts-phones-number">8 800 324 45 45</p></li>
-                            <li><p class="contacts-phones-town">Из Челябинска</p>
-                                <p class="contacts-phones-number">8 800 324 45 45</p></li>
-                            <li><p class="contacts-phones-town">Из Челябинска</p>
-                                <p class="contacts-phones-number">8 800 324 45 45</p></li>
-                            <li><p class="contacts-phones-town">Из Челябинска</p>
-                                <p class="contacts-phones-number">8 800 324 45 45</p></li>
-                        </ul>
+                      <div class="contacts-mail-info no-border text-center">
+                        <p class="mb30">Любую информациюможно уточнить в любом мессенджере по номеру:</p>
+                        <span class="mb30">8 800 500 43 57</span>
                     </div>
                 </div>
                 <div class="contacts-mail ">
                     <div class="contacts-mail-header">
                         <p>Или пишите!</p>
                     </div>
-                    <div class="contacts-mail-info">
-                        <p class="mb30">Любую информациюможно уточнить в любом мессенджере по номеру:</p>
-                        <span class="mb30">8 800 500 43 57</span>
-                    </div>
+
                     <div class="contacts-mail-info no-border">
-                        <p class="pt30 mb30">Любую интересующую информацию можно уточнить по адресу:</p>
-                        <span>help@edelveys.ru</span>
+                        <p class="mb30">Любую интересующую информацию можно уточнить по адресу:</p>
+                        <span>ede_edel@mail.ru</span>
                     </div>
                 </div>
 
