--- a/templates/basic.html
+++ b/templates/basic.html
@@ -10,6 +10,8 @@
     <title>{% block title %}  {% endblock %} </title>
     <meta name="keywords" content="{% block keywords %} keywords {% endblock %}">
     <meta name="description" content="{% block description %} description {% endblock %}"/>
+    {{ request.yandexTAG  }}
+    {{ request.googleTAG }}
     {% block css %}
         <link rel="stylesheet" href="{% static 'css/main.css' %}">
     {% endblock %}
