--- a/templates/footer.html
+++ b/templates/footer.html
@@ -5,7 +5,8 @@
             <div class="footer-top-info">
                 <p>Все материалы данного сайта защищены авторским правом. Полное или частичное копирование запрещено. Информация предназначена для аудитории 14+</p>
             </div>
-            <div class="footer-top-list not-visible-sm">
+
+            <div {% if  contactactive %}style="visibility: hidden" {% endif %} class="footer-top-list not-visible-sm">
                 <p>Реквизиты в России:</p>
                 <ul>
                     <li>ИП Фамилия И.И.</li>
@@ -13,7 +14,7 @@
                     <li>ОГРНИП 561563592526</li>
                 </ul>
             </div>
-            <div class="footer-top-list not-visible-sm">
+            <div {% if  contactactive %}style="visibility: hidden" {% endif %} class="footer-top-list not-visible-sm">
                 <p>Адрес офиса:</p>
                 <ul>
                     <li>г. {{ subdomain.town }}</li>
@@ -21,6 +22,7 @@
                     <li>Телефон: {{ subdomain.contactPhone }}</li>
                 </ul>
             </div>
+
 
             <div class="footer-top-phones text-right">
                 <p>8 800 500 43 57</p>
@@ -47,18 +49,12 @@
     </div>
 </footer>
 <!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+{% if seotag.yandexMetrika %}
+{{ seotag.yandexMetrika }}
+{% endif %}
+{% if seotag.fbPixel %}
+{{ seotag.fbPixel }}
+{% endif %}
 
-   ym(56395771, "init", {
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true
-   });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/56395771" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
 
 <script src="{% static 'js/sendform.js' %}"></script>
