--- a/templates/header.html
+++ b/templates/header.html
@@ -18,24 +18,24 @@
                 {% endif %}
             </div>
             <ul class="mobile-nav">
-                <li class="active"><a href="/">Главная</a></li>
-                <li><a href="{% url 'services' %}">Цены и сроки</a></li>
-                <li><a href="{% url 'allposts' %}">Статьи</a></li>
-                <li><a href="{% url 'index' %}#reviews" class="not-visible-sm">Отзывы</a></li>
-                <li><a href="{% url 'index' %}#about" class="not-visible-sm">О нас</a></li>
-                <li><a href="{% url 'contacts' %}">Контакты</a></li>
+                <li class="{{ homeactive }}"><a href="/">Главная</a></li>
+                <li class="{{ priceactive }}"><a href="{% url 'services' %}">Цены и сроки</a></li>
+                <li class="{{ postsactive }}"><a href="{% url 'allposts' %}">Статьи</a></li>
+                <li class="{{ homeactive }}"><a href="{% url 'index' %}#reviews" class="not-visible-sm">Отзывы</a></li>
+                <li class="{{ homeactive }}"><a href="{% url 'index' %}#about" class="not-visible-sm">О нас</a></li>
+                <li class="{{ contactactive }}"><a href="{% url 'contacts' %}">Контакты</a></li>
             </ul>
         </div>
     </div><!-- end mobile-menu-panel -->
     <div class="header-dropdown fixed">
         <img src="{% static 'images/icons/EDE.png' %}" alt="">
         <ul class="nav">
-            <li class="active"><a href="/">Главная</a></li>
-            <li><a href="{% url 'services' %}">Цены и сроки</a></li>
-            <li><a href="{% url 'allposts' %}">Статьи</a></li>
-            <li><a href="{% url 'index' %}#reviews" class="not-visible-sm">Отзывы</a></li>
-            <li><a href="{% url 'index' %}#about" class="not-visible-sm">О нас</a></li>
-            <li><a href="{% url 'contacts' %}">Контакты</a></li>
+           <li class="{{ homeactive }}"><a href="/">Главная</a></li>
+                <li class="{{ priceactive }}"><a href="{% url 'services' %}">Цены и сроки</a></li>
+                <li class="{{ postsactive }}"><a href="{% url 'allposts' %}">Статьи</a></li>
+                <li class="{{ homeactive }}"><a href="{% url 'index' %}#reviews" class="not-visible-sm">Отзывы</a></li>
+                <li class="{{ homeactive }}"><a href="{% url 'index' %}#about" class="not-visible-sm">О нас</a></li>
+                <li class="{{ contactactive }}"><a href="{% url 'contacts' %}">Контакты</a></li>
         </ul>
         <a  class="btn" onclick="toggleModal('order-modal')">оформить заявку</a>
         <div class="header-dropdown-user" >
