fix service page slider. add manytomany field to comment

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -6,7 +6,7 @@
                 <p>Все материалы данного сайта защищены авторским правом. Полное или частичное копирование запрещено. Информация предназначена для аудитории 14+</p>
             </div>
 
-            <div {% if  contactactive %}style="visibility: hidden" {% endif %} class="footer-top-list not-visible-sm">
+            <div style="visibility: hidden"  class="footer-top-list not-visible-sm">
                 <p>Реквизиты в России:</p>
                 <ul>
                     <li>ИП Фамилия И.И.</li>
