--- a/templates/header_index.html
+++ b/templates/header_index.html
@@ -77,7 +77,7 @@
             <div>
                 <div class="header-feature header-feature-1">
                     <div class="header-feature-inner">
-                        <p>Вместе с выполненной работой, Вы получите <span>результат проверки её на анти-плагиат</span></p>
+                        <p>Вместе с выполненной работой, Вы получите <span>результат проверки её на антиплагиат</span></p>
                     </div>
 
                 </div>
