--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -107,7 +107,7 @@
             <h3 class="text-center">Цены на основные услуги</h3>
               <div class="prices-wrapper">
                 <div class="price-item bg-1">
-                    <h5>Дипломая работа</h5>
+                    <h5>Дипломная работа</h5>
                     <p class="mb20">Стоимость:<span>от 9700 руб</span></p>
                     <p class="mb20">Сроки:<span>от 5 дней</span></p>
                     <p class="mb20">Работ выполнено:<span>27 700</span></p>
@@ -173,7 +173,7 @@
                 <div id="slide_3" class="how-it-works-slide ">
                     <div class="slide-text">
                         <h5 data-number="03" class="mb30">Мы сами оповестим Вас о готовности работы</h5>
-                        <p >Мы постоянно остаемся на связи и отвечаем на все Ваши вопросы. После того, как Ваша работа готова, мы сами связываемся с Вами и предоставляем результат — данные анти-плагиата или другие необходимые данные</p>
+                        <p >Мы постоянно остаемся на связи и отвечаем на все Ваши вопросы. После того, как Ваша работа готова, мы сами связываемся с Вами и предоставляем результат — данные антиплагиата или другие необходимые данные</p>
                     </div>
                     <div class="slide-img text-right not-visible-sm">
                         <img src="{% static 'images/hw-slider2.jpg' %}" alt="">
