--- a/templates/pages/services.html
+++ b/templates/pages/services.html
@@ -36,7 +36,7 @@
             <h1 class="mb50">Цены на основные услуги</h1>
             <div class="prices-wrapper">
                 <div class="price-item bg-grey">
-                    <h5>Дипломая работа</h5>
+                    <h5>Дипломная работа</h5>
                     <p class="mb20">Стоимость:<span>от 9700 руб</span></p>
                     <p class="mb20">Сроки:<span>от 5 дней</span></p>
                     <p class="mb20">Работ выполнено:<span>27 700</span></p>
